--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta content="" name="description" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1" name="viewport" />
-<link rel="shortcut icon" href="http://www.xueer.cc/favicon.ico" />
+<link rel="shortcut icon" href="http://www.chuans.cc/favicon.ico" />
 <link href="/font.css" rel="stylesheet" type="text/css" />
 <link href="/common.css" rel="stylesheet" type="text/css" />
 <link href="/index.css" rel="stylesheet" type="text/css" />
@@ -36,7 +36,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 <body>
 	<div class="newindex">
   <div class="topcloud"></div>
-  <div class="newlogo" data-scroll-reveal="enter top over 1s and move 100px"><a href="/"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/41c3bb36-e515-4a81-9eb4-01e058f43a93.png" width="81" alt="传说--跨界资源融合.引领行业公正"></a></div>
+  <div class="newlogo" data-scroll-reveal="enter top over 1s and move 100px"><a href="/"><img src="http://www.chuans.cc/logo.png" width="81" alt="传说--跨界资源融合.引领行业公正"></a></div>
 	<div class="indexmenu">
 		<a href="/pt.html" class="alink a1" title="信誉平台"><span>信誉平台</span></a>
 		<a href="/xnb.html" class="alink a2" title="虚拟币使用"><span>虚拟币使用</span></a>
