--- a/m_xnb.html
+++ b/m_xnb.html
@@ -75,7 +75,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/df839cc5-39f0-4bcf-8453-239a7f2ff0f9.png" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="http://www.chuans.cc/logo.png" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -107,7 +107,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 	<div class="top-category-back" onclick="dr_m_top_category2()"><i class="fa fa-close"></i></div>
 </div>
 <div class="money"> <header class="hui-header">
-		<a class="logo" href="/"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/df839cc5-39f0-4bcf-8453-239a7f2ff0f9.png"></a>
+		<a class="logo" href="/"><img src="http://www.chuans.cc/logo.png"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header>  <div class="money_content">
     <div class="money_tab">
@@ -159,7 +159,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 
 <div class="footer" style="line-height:0.2rem;">
   <p>© 2023 传说导航网 版权所有</p> 
-<p>网站操作建议仅代表第三方观点与本平台无关，投资有风险，入市需谨慎}</p>
+
 <p>Copytight © 2023 chuans.cc    All Rights Reserved</p>
 
 </div>
