--- a/m_lt.html
+++ b/m_lt.html
@@ -74,7 +74,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/df839cc5-39f0-4bcf-8453-239a7f2ff0f9.png" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="http://www.chuans.cc/logo.png" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -116,7 +116,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 </style>
 <div class="toolList hezuo hez">
 	<header class="hui-header">
-		<a class="logo" href="/"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/df839cc5-39f0-4bcf-8453-239a7f2ff0f9.png"></a>
+		<a class="logo" href="/"><img src="http://www.chuans.cc/logo.png"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header>	<div class="links2 container">
   <ul>
@@ -135,7 +135,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 
 <div class="footer" style="line-height:0.2rem;">
   <p>© 2023 传说导航网 版权所有</p> 
-<p>网站操作建议仅代表第三方观点与本平台无关，投资有风险，入市需谨慎}</p>
+
 <p>Copytight © 2023 chuans.cc    All Rights Reserved</p>
 
 </div>
