--- a/lx.html
+++ b/lx.html
@@ -53,8 +53,8 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </div>
 <div class="contact_con">
   <div class="tg-qq">
-	<div class="item tg"><a href="https://t.me/csnb85591" target="_blank">团队飞机:xiami123456</a></div>
-	  <div class="item qq"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank">ＱＱ客服:123456</a></div>
+	<div class="item tg"><a href="https://t.me/csnb85591" target="_blank">团队飞机:csnb85591</a></div>
+	  <div class="item qq"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank">ＱＱ客服:85591</a></div>
 	</div>
 </div>
 <div class="footer">
