--- a/tokenpocket.html
+++ b/tokenpocket.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 <meta charset="utf-8" />
-<title>TokenPocket钱包教程_音符团队</title>
+<title>TokenPocket钱包教程_传说导航</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 <link rel="shortcut icon" href="https://img12.360buyimg.com/ddimg/jfs/t1/124781/21/29406/3259/62dd9f37E0770b8fa/1df3f78800a58433.png" type="image/x-icon" />
