--- a/m_pt.html
+++ b/m_pt.html
@@ -77,7 +77,7 @@ body{font-size:12px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="http://www.chuans.cc/logo.png" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -110,7 +110,7 @@ body{font-size:12px;}
 </div>
 <div class="pingtai">
 <header class="hui-header">
-		<a class="logo" href="/"><img src="http://www.chuans.cc/logo.png"></a>
+		<a class="logo" href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header><div class="pf_content">
   <ul class="list">
