--- a/m_vpn.html
+++ b/m_vpn.html
@@ -82,7 +82,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="http://www.chuans.cc/logo.png" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -114,7 +114,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 	<div class="top-category-back" onclick="dr_m_top_category2()"><i class="fa fa-close"></i></div>
 </div>
 <header class="hui-header">
-		<a class="logo" href="/"><img src="http://www.chuans.cc/logo.png"></a>
+		<a class="logo" href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header><div class="banner_vpn"> 
   <img src="https://img07.mifile.cn/v1/MI_542ED8B1722DC/661fdb324921eddd3bd0d42cb068f829.jpg" style="width: 100%;">
