--- a/lt.html
+++ b/lt.html
@@ -37,7 +37,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </head>
 <body class="chat">
 <div class="header">
-  <div class="logo"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg"></a></div>
+  <div class="logo"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
     <div class="menu">
     <ul>
       <li ><a href="/" title="传说--跨界资源融合.引领行业公正">网站首页</a></li>
