--- a/m_lx.html
+++ b/m_lx.html
@@ -111,9 +111,9 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 </header><div class="contact">
   <div class="cbanner"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/b126cda263f89693082e0dc16654262d.png"></div>
 	<div class="tg-qq">
-	<div class="item tg"><a href="https://t.me/xueer880" target="_blank">飞机：12345</a></div>
-	  <div class="item qq"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank">ＱＱ：12345</a></div>
-	  <div class="item wx"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank">微信：12345</a></div>
+	<div class="item tg"><a href="https://t.me/csnb85591" target="_blank">飞机：csnb85591</a></div>
+	  <div class="item qq"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=85591&menu=yes" target="_blank">ＱＱ：85591</a></div>
+<!-- 	  <div class="item wx"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank">微信：12345</a></div> -->
 	</div>
 </div>
 
