--- a/lx.html
+++ b/lx.html
@@ -53,9 +53,9 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </div>
 <div class="contact_con">
   <div class="tg-qq">
-	<div class="item tg"><a href="https://t.me/csnb85591" target="_blank">飞机:csnb85591</a></div>
-	  <div class="item qq"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=85591&menu=yes" target="_blank">ＱＱ:85591</a></div>
-	  <div class="item wx"><a href="#" target="_blank">微信:85591</a></div>
+	<div class="item tg"><a href="https://t.me/csnb85591" target="_blank">飞机客服:csnb85591</a></div>
+	  <div class="item qq"><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=85591&menu=yes" target="_blank">ＱＱ客服:85591</a></div>
+	  <div class="item wx"><a href="#" target="_blank">微信客服:85591</a></div>
 	</div>
 </div>
 <div class="footer">
