--- a/m_lx.html
+++ b/m_lx.html
@@ -134,7 +134,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 <div class="contact_ico">
     <ul>
         <li><a href="https://t.me/csnb85591" target="_blank"><i class="fa fa-telegram"></i></a></li>
-        <li><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/58979/28/20949/1753/62edb945E621bf2f0/775d8b049cfe7363.png" width="30"></a></li>
+        <li><a href="http://wpa.qq.com/msgrd?v=3&uin=&site=85591&menu=yes" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/58979/28/20949/1753/62edb945E621bf2f0/775d8b049cfe7363.png" width="30"></a></li>
     </ul>
     
 </div>
