--- a/lx.html
+++ b/lx.html
@@ -34,6 +34,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 	}
 }
 </script>
+
 </head>
 <body class="contactus">
 <div class="header">
@@ -65,6 +66,10 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 
 </div>
 <style>
+.tg-qq .item{width:448px;height:113px;display:flex;align-items:center;padding-left:120px;font-size:24px;font-weight:700;}
+.tg-qq .wx{background:url(https://img03.mifile.cn/v1/MI_542ED8B1722DC/b3a17ab6342b67b72127f821a2a2643c.png) no-repeat;margin-top:50px;}
+.tg-qq .item a{color:#fff;display:block;width:100%;height:100%;line-height:113px;}
+.tg-qq .item a:hover{color:#ff0;}
     .contact_ico{position:fixed;right:10px;top:50%;height:160px;margin-top:-80px;width:80px;z-index:999;}
     .contact_ico ul li{width:80px;height:80px;border-radius:50%;background:#ddd;display:flex;align-items:center;justify-content:center;}
     .contact_ico ul li:nth-child(2){margin-top:10px;}
